Fix news date wrapping

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -33,6 +33,10 @@ body.sticky-bottom-footer {
   }
 }
 
+.news th {
+  white-space: nowrap;
+}
+
 // TODO: redefine content layout.
 
 
